<resources>
    <string name="app_name">FYP_Auction_System</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addNewBidProductTitle">Product For Bid</string>
    <string name="addNewProductTitle">Product For sales</string>
    <string name="productName">Artwork Name</string>
    <string name="product_Price">Artwork Price</string>
    <string name="product_image">Artwork Image</string>
    <string name="Author">Artist</string>
    <string name="OpenGallery">Open Gallery</string>
    <string name="Description">Description</string>
    <string name="minBid">Minimum bid</string>
    <string name="Cancel">cancel</string>
    <string name="addArtwork">Add Artwork</string>
    <string name="UpdateArtwork">Update</string>
    <string-array name="spinner_minBid">
        <item>Select a minimum price to bid</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string name="price">Price</string>
    <string name="log_out">Log Out</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_editprofile">Edit Profile</string>
    <string name="drawer_view_purchase">View Purchase</string>
    <string name="drawer_cart">Artwork Cart</string>
    <string name="drawer_recent">Recent Added</string>
    <string name="drawer_categories">Categories</string>
    <string name="drawer_auction">Auction Bidding</string>
    <string name="drawer_buy">Browse Artwork</string>
    <string name="drawer_home_admin">Home</string>
    <string name="drawer_sell">Selling</string>
    <string name="drawer_about">About Us</string>
    <string name="drawer_logout">Log Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_register">Don\'t have an account? <b>Sign Up now!</b></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_LoginWithoutID">Continue without Login</string>
    <string name="show_account">User@gmail.com</string>
    <string name="show_name">User</string>
    <string name="register">Register</string>
    <string name="registration">REGISTRATION</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Phone No</string>
    <string name="hint_age">Age</string>
    <string name="hint_country">Country</string>
    <string name="backToLogin">I have an account, log in now.</string>
    <string name="todo">TODO</string>
    <string name="dis_name">Name</string>
    <string name="dis_age">Age</string>
    <string name="dis_country">Country</string>
    <string name="dis_phone">Phone Number</string>
    <string name="dis_email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="forgot_pg">Forget Your Password ?</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_back"><b>Back to login page</b></string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="btn_return">Return &amp; Refund</string>
    <string name="seller">Seller Name</string>
    <string name="status">Complete</string>
    <string name="product_name">Product Name</string>
    <string name="order_ID">Order ID</string>
    <string name="order_Time">Order Time</string>
    <string name="order_type">Order Type</string>
    <string name="order_total">Order Total</string>
    <string name="show_ID">20134</string>
    <string name="show_Time">02/22/2022</string>
    <string name="show_tye">Auction</string>
    <string name="show_total">RM4399</string>
    <string name="show_Seller">Monalisa</string>
    <string name="btn_submit">Submit</string>
    <string name="desc_return">Dropdown Something Here</string>
    <string name="reason">Reason</string>
    <string-array name="spinner_reason">
        <item>The Item are fake</item>
        <item>The Item got painchips</item>
        <item>The Item does not same as picture show</item>
    </string-array>
    <string name="price_show_return">Price</string>
    <string name="Desc_Bid">The Mona Lisa bears a strong resemblance to many Renaissance depictions of the Virgin Mary,
        who was at that time seen as an ideal for womanhood.</string>
    <string name="btn_Place">Click to Bid</string>
    <string name="btnMore">View More</string>
    <string name="btn_Bid">Place Bid</string>
    <string name="editPriceBid">Enter a Bid</string>
    <string name="SalesReport">Sales Report</string>
    <string name="show_admin" />
    <string name="buy">Buy</string>
    <string name="addToCart">add To Cart</string>
    <string-array name="spinner_bid">
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string name="navLogin">navLogin</string>
    <string name="viewMoreBid">View More</string>
    <string name="viewMoreBuy">View More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Remove">Remove</string>
    <string name="Cart">Art Cart</string>
    <string name="recycleviewsaleshome" />
    <string name="recycleViewBidHome" />
    <string name="AddToCartTotal">RM0</string>
    <string name="add_new_card">Credit Card Payment</string>
    <string name="add_card">Add new card</string>
    <string name="tabs">tabs</string>
    <string name="viewpager">viewpager</string>
</resources>