<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:context="com.nghycp.fyp_auction_system">


    <item
        android:id="@+id/adminHomePage"
        android:title="@string/drawer_home_admin" />
    <item
        android:id="@+id/monthlysales"
        android:title="@string/MonthlySales" />

    <item android:id="@+id/recentAddFragment"
        android:title="@string/drawer_recent"/>

    <item android:id="@+id/adminShowBid"
        android:title="Auction Bid Show"/>

    <item
        android:id="@+id/sellOption"
        android:title="@string/drawer_sell" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/drawer_logout" />

</menu>