<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".bidding.FragmentBidSellerForm">

    <TextView
        android:id="@+id/textView_productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/productName"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addNewProductTitle" />

    <EditText
        android:id="@+id/editText_productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/productName"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_productName"
        app:layout_constraintTop_toBottomOf="@+id/textView_productName" />

    <TextView
        android:id="@+id/textView_ProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_Price"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/product_Price"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_ProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/textView_ProductPrice" />

    <TextView
        android:id="@+id/textView_productAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Artist"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/Author"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_productAuthor"
        app:layout_constraintTop_toBottomOf="@+id/textView_productAuthor" />

    <TextView
        android:id="@+id/textView_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_image"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/spinner_minBid"
        app:layout_constraintTop_toBottomOf="@+id/spinner_minBid" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editText_productName"
        app:layout_constraintTop_toBottomOf="@+id/editText_productName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_description" />

    <TextView
        android:id="@+id/TextView_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minBid"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/addArtwork"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_minBid"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/minBid"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Category" />

    <TextView
        android:id="@+id/textView_addNewProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/addNewBidProductTitle"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="83dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_productImage" />

</androidx.constraintlayout.widget.ConstraintLayout>