<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".customer.ArtworkInsertFragment">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/productName"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_AddNewProductTitle" />

    <EditText
        android:id="@+id/editText_productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/productName"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_Price"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription1"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription1" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/product_Price"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Author"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="@dimen/minHeight"
        android:ems="10"
        android:hint="@string/Author"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewAuthor"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

    <TextView
        android:id="@+id/textView_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_image"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextAuthor"
        app:layout_constraintTop_toBottomOf="@+id/editTextAuthor" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/editText_productName"
        app:layout_constraintTop_toBottomOf="@+id/editText_productName" />

    <EditText
        android:id="@+id/editTextDescription1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_description" />

    <Button
        android:id="@+id/buttonAddSelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/addArtwork"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_AddNewProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/addNewProductTitle"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="83dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_productImage" />

</androidx.constraintlayout.widget.ConstraintLayout>